<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Currency Converter</string>

    <string name="format_date">MM-dd-yyyy hh:mm</string>

    <string name="label_settings">Settings</string>
    <string name="label_pref_category_services">Services</string>
    <string name="label_pref_service_http_requester_title">HTTP Requester</string>
    <string name="label_pref_service_http_requester_summary">Keep service running after closing application.</string>
    <string name="label_pref_service_http_requester_frequency_title">Currency Conversion Data Update Frequency</string>
    <string name="label_pref_service_http_requester_frequency_summary">Frequency for updating currency conversion data.</string>

    <string name="entry_update_frequency_preference_1_hour">1 hour</string>
    <string name="entry_update_frequency_preference_6_hour">6 hours</string>
    <string name="entry_update_frequency_preference_12_hour">12 hours</string>
    <string name="entry_update_frequency_preference_1_day">1 day</string>

    <string name="label_currency_conversion_empty_text">Add a new currency conversion using the + button</string>

    <string name="title_activity_add_conversion">Currency Conversion</string>

    <string name="label_currency_conversion_base">Base Currency</string>
    <string name="label_currency_conversion_target">Target Currency</string>

    <string name="button_text_add_currency_conversion">Add</string>

</resources>
